Fix issue with spacings in enquire to study page

--- a/rca/static_src/sass/components/_introduction.scss
+++ b/rca/static_src/sass/components/_introduction.scss
@@ -24,6 +24,14 @@
 
         &--no-margin {
             margin-bottom: 0;
+
+            .enquire-form & {
+                margin-bottom: $gutter;
+
+                @include media-query(large) {
+                    margin-bottom: 0;
+                }
+            }
         }
     }
 
