--- a/rca/static_src/sass/components/_title-area.scss
+++ b/rca/static_src/sass/components/_title-area.scss
@@ -10,6 +10,18 @@
         padding-bottom: ($gutter * 3);
     }
 
+    .enquire-form & {
+        padding-bottom: 0;
+
+        @include media-query(medium) {
+            padding-bottom: ($gutter * 4);
+        }
+
+        @include media-query(large) {
+            padding-bottom: ($gutter * 3);
+        }
+    }
+
     &--spaced {
         #{$root}__heading {
             margin-bottom: $gutter;
